added working login functionality and ui